[package]
name = "tensor_types"
version = "1.1.2"
edition = "2021"
description = "Create typed and sized-checked Rust wrappers for Tensors for more reliable ML code."
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", optional = true }
tch = "0.14.0"
thiserror = "1.0.48"
trybuild = "1.0.85"
num-format = "0.4.4"
